--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.webby.proto</groupId>
-	<artifactId>protostuff-runtime-proto</artifactId>
+	<groupId>org.alan.proto</groupId>
+	<artifactId>protostuff-java2proto</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>protostuff-runtime-proto</name>
-	<description>Protostuff Runtime Proto Files Generator</description>
 
     <properties>
-      <protostuff.version>1.0.8</protostuff.version>
+      <protostuff.version>1.0.9</protostuff.version>
       <antlr3.version>3.2</antlr3.version>
     </properties>
 
@@ -42,7 +40,7 @@
 		<dependency>
 			<groupId>org.alan</groupId>
 			<artifactId>utils</artifactId>
-			<version>1.0.2</version>
+			<version>1.1.2-SNAPSHOT</version>
 		</dependency>
         <!-- TEST -->
 		<dependency>
@@ -79,39 +77,4 @@
 			</plugin>			
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>nexus</id>
-			<name>Nexus</name>
-			<url>http://192.168.5.128:8081/nexus/content/groups/public</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>nexus</id>
-			<name>Nexus</name>
-			<url>http://192.168.5.128:8081/nexus/context/groups/public/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>Nexus Release Repository</name>
-			<url>http://192.168.5.128:8081/nexus/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>Nexus Snapshot Repository</name>
-			<url>http://192.168.5.128:8081/nexus/content/repositories/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
